--- a/sass/modules/slider/_slider-style-one.scss
+++ b/sass/modules/slider/_slider-style-one.scss
@@ -329,6 +329,7 @@
           }
           @include sm {
             font-size: 16px;
+            margin-bottom: 6px;
           }
         }
         .slider-title {
@@ -356,7 +357,7 @@
           @include sm {
             font-size: 38px;
             line-height: 44px;
-            margin-bottom: 20px;
+            margin-bottom: 24px;
           }
           span {
             color: $primary-color;
@@ -382,13 +383,14 @@
           }
           @include sm {
             width: 100%;
+            margin-top: 0;
           }
         }
         .slider-btn-wrapper {
           margin-top: 16px;
 
           @include sm {
-            margin-top: 30px;
+            margin-top: 24px;
           }
         }
       }
